Bug 509776 - Magnifier doesn't show up when cursor is not moving
Summary: Magnifier doesn't show up when cursor is not moving
Status: RESOLVED FIXED
Alias: None
Product: Spectacle
Classification: Applications
Component: General (other bugs)
Version First Reported In: 6.4.5
Platform: Fedora RPMs Linux
: NOR minor
Target Milestone: ---
Assignee: Noah Davis
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-09-22 09:50 UTC by madness742
Modified: 2026-04-15 22:22 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In: 6.7.0
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description madness742 2025-09-22 09:50:21 UTC
SUMMARY
When holding shift to display the magnifier, it doesn't show up when the cursor is 

STEPS TO REPRODUCE
1. Press on the PrtScn key to bring up Spectacle.
2. Hold shift without moving the cursor.

OBSERVED RESULT
The magnifier doesn't show up.

EXPECTED RESULT
The  magnifier should be visible.

SOFTWARE/OS VERSIONS
Linux/KDE Plasma: Fedora Linux 42
KDE Plasma Version: 6.4.5
KDE Frameworks Version: 6.18.0
Qt Version: 6.9.2

ADDITIONAL INFORMATION
- Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2026-04-14 07:23:10 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/spectacle/-/merge_requests/530
Comment 2 Noah Davis 2026-04-15 15:22:25 UTC
Git commit f5d4244abb2b5d5a8e2db3bd22b658f71ce186da by Noah Davis.
Committed on 14/04/2026 at 07:18.
Pushed by ndavis into branch 'master'.

SelectionEditor: Don't call setShowMagnifier in hoverMoveEvent

This is what caused the magnifier to only show while moving the mouse.
Showing the magnifier should already be handled in keyPressEvent.
Related: bug 509777

M  +0    -1    src/Gui/SelectionEditor.cpp

https://invent.kde.org/plasma/spectacle/-/commit/f5d4244abb2b5d5a8e2db3bd22b658f71ce186da
Comment 3 Noah Davis 2026-04-15 22:22:33 UTC
Git commit 705a0ca772ee9fefd1db38d38bba86748e340334 by Noah Davis.
Committed on 15/04/2026 at 22:22.
Pushed by ndavis into branch 'Plasma/6.6'.

SelectionEditor: Don't call setShowMagnifier in hoverMoveEvent

This is what caused the magnifier to only show while moving the mouse.
Showing the magnifier should already be handled in keyPressEvent.
Related: bug 509777

(cherry picked from commit f5d4244abb2b5d5a8e2db3bd22b658f71ce186da)

Co-authored-by: Noah Davis <noahadvs@gmail.com>

M  +0    -1    src/Gui/SelectionEditor.cpp

https://invent.kde.org/plasma/spectacle/-/commit/705a0ca772ee9fefd1db38d38bba86748e340334