SelectionEditor: Don't call setShowMagnifier in hoverMoveEvent

This is what caused the magnifier to only show while moving the mouse.
Showing the magnifier should already be handled in keyPressEvent.

BUG: 509776
BUG: 509777